# simple-slack-messenger

./: Makefile  README.md  notify.py  pyproject.toml
src/simple_slack_messenger/: cli.py  local_types.py  messenger.py  slack.py  utils.py
src/simple_slack_messenger.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
