[tool.poetry]
name = "simple-slack-messager"
version = "0.1.0"
description = "A script, with no Python dependencies, to post and edit a Slack message"
authors = ["Axel <dev@absalon.is>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
ipdb = "^0.13.3"
pdbpp = "^0.10.2"
mypy = "^0.782"
isort = "^5.4.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
